--- a/cutgroup.html
+++ b/cutgroup.html
@@ -43,13 +43,18 @@
                 <li><a href = "contact.html">Contact</a></li>
 			</ul>
         </nav>
-        <h1>CUTgroup Project Manager</h1>
 	</header>
 
 	<main id="main">
+        <h1>CUTgroup Project Manager</h1>
+
+        <div class="parallax"></div>
         <h2>CUTgroup is my part time user testing/project management job!</h2>
-        <img src="images/cut_group_cover.JPG" alt="CUTgroup Cover Photo" width="200">
-        <h2>What is CUTgroup?</h2>
+        <h1 class="emoji">&#128075;</h1>
+        <div class="spacer"></div>
+
+        <img class="cutgroup" src="images/cut_group_cover.JPG" alt="CUTgroup Cover Photo" width="200">
+        <h3>What is CUTgroup?</h3>
         <p>
             <a href="https://mcompass.umich.edu/index.cfm?FuseAction=Programs.ViewProgramAngular&id=11616">Civic User Testing Group (CUTgroup)</a>
             seeks to help residents take an active part in their government systems.
@@ -62,13 +67,13 @@
         </p>
 
         <figure>
-        <img src="images/mirocardsort.JPG" alt="Card sort from the water billing project" width="200">
+        <img class="cardsort" src="images/mirocardsort.JPG" alt="Card sort from the water billing project" width="200">
         <figcaption>Card sort activity that a user completed for the Ann Arbor Water Billing project</figcaption>
         </figure>
 
-        <h2>My role as the CUTgroup Coordinator</h2>
+        <h3>My role as the CUTgroup Project Manager</h3>
         <p>
-            My position as the CUTgroup Coordinator is to plan the logistics and guide students through the experience
+            My position as the CUTgroup Project Manager is to plan the logistics and guide students through the experience
             of developing, implementing, and analyzing a user testing session. I strive to facilitate user testing and
             developing client solutions to students in a way that provides a learning opportunity to the students and
             provides usability to the client.
