--- a/contact.html
+++ b/contact.html
@@ -43,18 +43,18 @@
 			</ul>
 		</nav>
 		<!-- The h1 is a semantic tag that aids accessibility -->
-		<h1>Say hi!</h1>
 	</header>
 
 	<!-- Every page should have a main tag for accessibility -->
 	<main id="main">
+		<h1>Say hi!</h1>
 		<div class="flip-card" tabindex="0">
 			<div class="flip-card-inner">
 				<div class="flip-card-front">
-					<img src="images/amyheadshot.jpg" alt="Headshot picture of Amy">
+					<img class="contactimage" src="images/amyheadshot.jpg" alt="Headshot picture of Amy">
 			  	</div>
 				<div class="flip-card-back">
-					<h3>Amy Engineer</h3>
+					<h2>Amy Engineer</h2>
 					<p>UX & UI Extraordinaire</p>
 					<p>Passionate about making tech more human</p>
 				</div>
@@ -62,7 +62,10 @@
 		</div>
 
 		<div id="anotherspacer"></div>
-        <h2>If you would like to connect, please fill out the form below, and I will get back to you.</h2>
+
+		<div class="tooltip" tabindex="0"><h2>Want to connect</h2>
+			<span class="tooltipcontact">Fill out the form below and I will get back to you.</span>
+		</div>
 
 		<div class="form">
 		<form action="https://formspree.io/f/mvolbpok" method="POST">
@@ -89,14 +92,14 @@
 				</div>
 
 				<div class="formspacing">
-					<label for= "message_id">Leave A Message</label>
+					<label for="message_id">Leave A Message</label>
 					<i class="fa-solid fa-pen-clip"></i>
 					<input type="textarea" name = "message" id = "message_id" placeholder = "Type here"></textarea>
 				</div>
 
 				<div class="formspacing">
+					<label for="subscribe">Remember me</label>
 					<input type="checkbox" name = "Subscribe" id = "subscribe">
-					<label for ="subscribe">Remember me</label>
 				</div>
 
 				<div class="formspacing">
