--- a/contextualinquiry.html
+++ b/contextualinquiry.html
@@ -43,14 +43,14 @@
                 <li><a href = "contact.html">Contact</a></li>
 			</ul>
         </nav>
-        <h1>Contextual Inquiry</h1>
 	</header>
 
 	<main class="inquiry" id="main">
+        <h1>Contextual Inquiry</h1>
         <h2>A lesson in client consulting, interviewing, affinity walls</h2>
 
         <div class="grid">
-            <div class="rowgap">
+            <div class="rowgap" id="firstparagraph">
                 <p>
                     <a href="https://amyeng.myportfolio.com/case-study-client-recruitment">The Problem</a>- the client expressed
                     frustration with their current database management system and their  process for customer
@@ -59,47 +59,45 @@
                     with different stakeholder groups.
                 </p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="firstpicture">
                 <img src="images/problem.JPG" alt="client's information problem defined" width="200">
             </div>
 
-            <div class="rowgap">
-                <div id="contextual">
-                    <p>
-                        Contextual Inquiry- prepping the interview questions well in advance proved useful and I improved my
-                        inquiry skills with each interview.  I used the 5 Whys method to understand what people don't like about
-                        the process and their interactions with their customers.  I was able to collect a lot of qualitative data.
-                    </p>
-                </div>
-            </div>
-            <div class="rowgap">
-                <div id="affinity">
-                    <img src="images/affinitywall_example.JPG" alt="crucial information from the affinity wall" width="200">
-                </div>
+            <div class="rowgap" id="secondparagraph">
+                <p>
+                    Contextual Inquiry- prepping the interview questions well in advance proved useful and I improved my
+                    inquiry skills with each interview.  I used the 5 Whys method to understand what people don't like about
+                    the process and their interactions with their customers.  I was able to collect a lot of qualitative data.
+                </p>
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="secondpicture">
+                <img src="images/affinitywall_example.JPG" alt="crucial information from the affinity wall" width="200">
+            </div>
+
+            <div class="rowgap" id="thirdparagraph">
                 <p>First, the team and I had to gather up the data and create our affinity notes.  We went with the
                     general rule of 1 affinity note per minute of interview.  Our medium of choice was Miro, which
                     is an online whiteboarding system.  We sorted through the data by creating groupings of
                     similiar findings.  This is called affinity mapping</p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="thirdpicture">
                 <img src="images/affinity_scoping.JPG" alt="clustering information on the project scoping problem" width="200">
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="fourthparagraph">
                 <p>
                     Affinity Wall- these grouping were very helpful for seeing the common problems that the
                     interviewees were facing.  Next, we reviewed these insights and had a lengthy discussion on how to
                     translate these insights into recommendations for how their new platform, Salesforce, should function.
                 </p>
             </div>
-            <div class="rowgap">
+
+            <div class="rowgap" id=fourthpicture>
                 <img src="images/affinity_wall.jpg" alt="Affinity Wall" width="200">
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="fifthparagraph">
                 <p>
                     Productive Client Solutions- the process was very informative and led to several implications.
                     Every finding was attached to a recommendation.  I personally strived to ensure that every recommendation
@@ -107,32 +105,32 @@
                     thorough as possible.
                 </p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="fifthpicture">
                 <img src="images/affinity_wall_close_up.JPG" alt="Close up of the Affinity Wall" width="200">
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="sixthparagraph">
                 <p>
                     For example, it became apparent that their process of recruiting, scoping, and matching customers
                     to the right program is a lengthy process that has several points of possible improvement.
                     Check out what I presented to the clients below!
                 </p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="sixthpicture">
                 <img src="images/training.JPG" alt="Reccomendation on training" width="200">
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="seventhparagraph">
                 <p>
                     It was very important that the organization start training their employees to work with all of the
                     clients well in advance.  This will help with the influx of customers that come in.
                 </p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="seventhpicture">
                 <img src="images/scoping.JPG" alt="Recommendation on Scoping" width="200">
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="eigthparagraph">
                 <p>
                     Communicating with their clients often enough to keep them in the loop is an essential part of ensuring
                     that their clients have a good matching experience.  This is because the process is very lengthy, so there are
@@ -140,11 +138,11 @@
                     careful of.
                 </p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="eightpicture">
                 <img src="images/communication.JPG" alt="Recommendation on Communications" width="200">
             </div>
 
-            <div class="rowgap">
+            <div class="rowgap" id="ninthparagraph">
                 <p>
                     The organization has decided to switch their client database to the Salesforce platform.  They should work
                     directly with the Salesforce service representatives to ensure that they are making the most of the platform.
@@ -152,7 +150,7 @@
                     to the new platform.
                 </p>
             </div>
-            <div class="rowgap">
+            <div class="rowgap" id="ninthpicture">
                 <img src="images/salesforce.JPG" alt="Recommendation on Salesforce" width="200">
             </div>
         </div>
