--- a/interactiondesign.html
+++ b/interactiondesign.html
@@ -43,34 +43,29 @@
                 <li><a href = "contact.html">Contact</a></li>
 			</ul>
         </nav>
-        <h1>Interaction Design</h1>
 	</header>
 
 	<main id="main" class="flex">
-        <div class="first">
-            <img src="images/gojobsgo.JPG" alt="Picture of the app logo" width="200">
-        </div>
+        <h1>Interaction Design</h1>
 
-        <div class="skills">
-            <h2>Process & Skills Gained</h2>
-            <p>
-            In addition to user research skills, I have also gained several competencies surrounding design,
-            prototyping, and the product lifecycle.  Last semester, I developed a pitch and accompanying prototypes
-            for an internship-search app for students.  I challenged myself to take this project all the way to a
-            mid-fidelity prototype, which allowed me to ideate and refine my product at several stages in the
-            development process.  I strove to really understand who my customer base is and what their needs are
-            to confidently develop a concept that provides utility and function.  I then took the time to develop
-            personas, conduct a competitor analysis, and scope the app and its key features.  The wireframing and
-            prototyping stage involved several rounds of sketches and wireframes before using Figma to develop the
-            design and the interactions.
-            </p>
-        </div>
+        <img class="gojobgo" src="images/gojobsgo.JPG" alt="Picture of the app logo" width="200">
 
-        <div class="app">
-            <p>The app is meant to help students find mini-internships and be able to track their projects and tasks,
-            as well as provide a communication platform with their supervisor, all on the same platform.
-            </p>
-        </div>
+        <h2>Process & Skills Gained</h2>
+        <p>
+        In addition to user research skills, I have also gained several competencies surrounding design,
+        prototyping, and the product lifecycle.  Last semester, I developed a pitch and accompanying prototypes
+        for an internship-search app for students.  I challenged myself to take this project all the way to a
+        mid-fidelity prototype, which allowed me to ideate and refine my product at several stages in the
+        development process.  I strove to really understand who my customer base is and what their needs are
+        to confidently develop a concept that provides utility and function.  I then took the time to develop
+        personas, conduct a competitor analysis, and scope the app and its key features.  The wireframing and
+        prototyping stage involved several rounds of sketches and wireframes before using Figma to develop the
+        design and the interactions.
+        </p>
+
+        <p>The app is meant to help students find mini-internships and be able to track their projects and tasks,
+        as well as provide a communication platform with their supervisor, all on the same platform.
+        </p>
 
         <div class="qoc">
             <img src="images/qoc_screenshot.JPG" alt="QOC analysis, early stage of app research" width="200">
@@ -79,9 +74,9 @@
                 my clients usefulness.</p>
         </div>
 
-        <img src="images/home.JPG" alt="homepage for GoJobGo" width="200">
+        <h2 class="heading2">Check Out the App Below</h2>
+        <img class="home" src="images/home.JPG" alt="homepage for the app GoJobGo" width="200">
 
-        <h2>Check Out the App Below</h2>
         <p>In order, the user first searches for a mini-internship, then if they find an opportunity they like, they
             can apply for it.  Users can also chat with the employers on the app to make a good impression.  After
             the user gets an offer, they have the choice to negotiate with their supervisor to get the best deal.
@@ -90,17 +85,17 @@
             can easily creat subtasks and mark them as complete as you go.</p>
 
         <div class="appgallery">
-            <img src="images/search.JPG" alt="the app search function" width="200">
+            <img src="images/search.JPG" alt="the app search function">
 
-            <img src="images/opportunity.JPG" alt="example of an internship opportunity" width="200">
+            <img src="images/opportunity.JPG" alt="example of an internship opportunity">
 
-            <img src="images/chat.JPG" alt="use the chat function" width="200">
+            <img src="images/chat.JPG" alt="use the chat function">
 
-            <img src="images/negotiate.JPG" alt="chat feature with negotiation example" width="200">
+            <img src="images/negotiate.JPG" alt="chat feature with negotiation example">
 
-            <img src="images/task.JPG" alt="example of the project tracker" width="200">
+            <img src="images/task.JPG" alt="example of the project tracker">
 
-            <img src="images/task2.JPG" alt="marking subtasks as complete" width="200">
+            <img src="images/task2.JPG" alt="marking subtasks as complete">
         </div>
 
         <p>
