--- a/cutgroup.html
+++ b/cutgroup.html
@@ -68,7 +68,7 @@
 
         <figure>
         <img class="cardsort" src="images/mirocardsort.JPG" alt="Card sort from the water billing project" width="200">
-        <figcaption>Card sort activity that a user completed for the Ann Arbor Water Billing project</figcaption>
+        <figcaption id="caption">Card sort activity that a user completed for the Ann Arbor Water Billing project</figcaption>
         </figure>
 
         <h3>My role as the CUTgroup Project Manager</h3>
@@ -76,7 +76,8 @@
             My position as the CUTgroup Project Manager is to plan the logistics and guide students through the experience
             of developing, implementing, and analyzing a user testing session. I strive to facilitate user testing and
             developing client solutions to students in a way that provides a learning opportunity to the students and
-            provides usability to the client.
+            provides usability to the client.  I make sure to be inclusive with my user recruitment, because it is
+            important that all users in Ann Arbor and Michigan get a say in the design process of these goverment tools.
             <br>
             Skills: facilitation, strategic planning, client communication, user testing, client deliverables, and
             logistics
