--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<!-- Every page should have a main tag for accessibility -->
 	<main id="main">
-		<h1>Amy Portfolio</h1>
+		<h1>Amy's Portfolio</h1>
 		<h1 class="emoji">&#128075;</h1>
 		<div class="spacer"></div>
 
@@ -73,14 +73,20 @@
 
         <img class="LCSL" src="images/lcsl_pic.jpg" alt="Another headshot picture of Amy at her old job">
 
+		<p>Diversity in tech is really important to me, because I am a woman of color.  I plan on using my
+			life experiences and my experiences creating inclusive environments to make sure the field is as equitable
+			and inclusive for all.  Afterall, if we are desigining for people, then all people need to be at the table.
+		</p>
+		<figure>
+			<img class='bessie' src="images/bessie.jpg" alt="Picture of Bessie the cat">
+			<figcaption>Bessie the cat (He/Him/His).</figcaption>
+		</figure>
+		
 		<p>My hobbies include baking (I make a mean blueberry muffin!), traveling, taking care of my house plants, and
-            hanging out with my roommate's cat. I am passionate about civic engagement and try to volunteer in my
-            community often.  I also think it's important to get fresh air (yes, even in the winter!), so you can catch
-            me going on runs in my neighborhood in Ann Arbor.
-            <br><br>
-            I am currently seeking a full time internship for the summer months  with the possibility of continuation
-            upon graduation.
-        </p>
+			hanging out with my roommate's cat, Bessie.  I am passionate about civic engagement and try to volunteer
+			in my community often.  I also think it's important to get fresh air (yes, even in the winter!), so you
+			can catch me going on runs in my neighborhood in Ann Arbor.  I am currently seeking a full time UX
+			Researcher or Product Manager position upon graduation.</p>
 
 	</main>
 
