--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
 		<div id="anotherspacer"></div>
 
-		<div class="tooltip" tabindex="0"><h2>Want to connect</h2>
+		<div class="tooltip" tabindex="0"><h2>Want to connect?</h2>
 			<span class="tooltipcontact">Fill out the form below and I will get back to you.</span>
 		</div>
 
@@ -80,7 +80,7 @@
 				<div class="formspacing">
 					<label for="email_id">Your Email</label>
 					<i class="fa-solid fa-envelope"></i>
-					<input type="email" name = "user_email" id = "email_id" placeholder = "me@me.com">
+					<input type="email" name = "user_email" id = "email_id" placeholder = "me@me.com" required>
 					<div><span>Format: me@me.com</span></div>
 				</div>
 
@@ -94,7 +94,8 @@
 				<div class="formspacing">
 					<label for="message_id">Leave A Message</label>
 					<i class="fa-solid fa-pen-clip"></i>
-					<input type="textarea" name = "message" id = "message_id" placeholder = "Type here"></textarea>
+					<textarea placeholder="Type Here" name = "message" id = "message_id"></textarea>
+
 				</div>
 
 				<div class="formspacing">
