--- a/interactiondesign.html
+++ b/interactiondesign.html
@@ -46,7 +46,7 @@
 	</header>
 
 	<main id="main" class="flex">
-        <h1>Interaction Design</h1>
+        <h1>SI582: Interaction Design</h1>
 
         <img class="gojobgo" src="images/gojobsgo.JPG" alt="Picture of the app logo" width="200">
 
