--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 
-		<div id="anotherspacer"></div>
+		<!-- <div id="anotherspacer"></div> -->
 
 		<div class="tooltip" tabindex="0"><h2>Want to connect?</h2>
 			<span class="tooltipcontact">Fill out the form below and I will get back to you.</span>
