--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			and inclusive for all.  Afterall, if we are desigining for people, then all people need to be at the table.
 		</p>
 		<figure>
-			<img class='bessie' src="images/bessie.jpg" alt="Picture of Bessie the cat">
+			<img class='bessie' src="images/Bessie.jpg" alt="Picture of Bessie the cat">
 			<figcaption>Bessie the cat (He/Him/His).</figcaption>
 		</figure>
 		
